--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "bootstrap-slider": "^10.3.1",
     "jquery": "^3.3.1",
     "mapbox-gl": "^0.51.0"
   }
