--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^1.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
+    "@mapbox/geojson-extent": "^0.3.2",
+    "@turf/turf": "^5.1.6",
     "bootstrap": "^4.1.3",
     "bootstrap-slider": "^10.3.1",
     "jquery": "^3.3.1",
-    "mapbox-gl": "^0.51.0"
+    "mapbox-gl": "^0.51.0",
+    "osmtogeojson": "^3.0.0-beta.3",
+    "popper": "^1.0.1"
   }
 }
