--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production"
+    "dev": "NODE_ENV=dev webpack --mode development",
+    "build": "NODE_ENV=prod webpack --mode production"
   },
   "keywords": [],
   "author": "",
