--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jquery": "^3.3.1",
     "mapbox-gl": "^0.51.0",
     "osmtogeojson": "^3.0.0-beta.3",
-    "popper": "^1.0.1"
+    "popper": "^1.0.1",
+    "typeface-chivo": "0.0.54"
   }
 }
