--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.5.0",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^1.0.1",
     "d3": "^3.5.17",
@@ -34,6 +35,7 @@
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@mapbox/geojson-extent": "^0.3.2",
     "@turf/turf": "^5.1.6",
     "bootstrap": "^4.1.3",
