--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.5.0",
+    "axios": "^0.18.0",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^1.0.1",
     "d3": "^3.5.17",
