Use S3 instead of surge, fix some typos, pause video on close modal

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-*.webm
+*.mp4
+redirect/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -196,4 +197,3 @@ typings/
 
 #DynamoDB Local files 
 .dynamodb/ 
-
