--- a/build
+++ b/build
@@ -6,6 +6,10 @@ cp src/logo/oobica.png dist
 cp openelec_video.mp4 dist
 echo https://openelec.surge.sh > dist/CNAME
 
-if [ $1 == build ]; then
+if [ $1 == stage ]; then
+    aws s3 sync ./dist s3://stage.openelec.me/ --delete
+fi
+
+if [ $1 == prod ]; then
     aws s3 sync ./dist s3://openelec.me/ --delete
 fi
