--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openelec_front",
+  "name": "openelec-app",
   "version": "1.0.0",
   "description": "",
   "private": true,
@@ -47,7 +47,6 @@
     "jquery": "^3.3.1",
     "mapbox-gl": "^0.51.0",
     "osmtogeojson": "^3.0.0-beta.3",
-    "popper": "^1.0.1",
     "typeface-chivo": "0.0.54"
   }
 }
