--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
   "license": "ISC",
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.5.0",
+    "@fortawesome/free-solid-svg-icons": "^5.8.2",
+    "@mapbox/geojson-extent": "^0.3.2",
+    "@turf/turf": "^5.1.6",
     "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
+    "bootstrap-slider": "^10.6.1",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^1.0.1",
     "d3": "^3.5.17",
@@ -27,26 +32,21 @@
     "eslint-plugin-standard": "^4.0.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.4.1",
     "jszip": "^3.1.5",
+    "mapbox-gl": "^0.51.0",
     "mini-css-extract-plugin": "^0.4.5",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "osmtogeojson": "^3.0.0-beta.3",
+    "popper": "^1.0.1",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.1.0",
+    "typeface-chivo": "0.0.54",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.1.2",
-    "webpack": "^4.26.1",
+    "webpack": "^4.31.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14"
   },
-  "dependencies": {
-    "@fortawesome/free-solid-svg-icons": "^5.5.0",
-    "@mapbox/geojson-extent": "^0.3.2",
-    "@turf/turf": "^5.1.6",
-    "bootstrap": "^4.1.3",
-    "bootstrap-slider": "^10.3.1",
-    "jquery": "^3.3.1",
-    "mapbox-gl": "^0.51.0",
-    "osmtogeojson": "^3.0.0-beta.3",
-    "typeface-chivo": "0.0.54"
-  }
+  "dependencies": {}
 }
