--- a/package.json
+++ b/package.json
@@ -13,31 +13,34 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.8.2",
-    "@fortawesome/free-solid-svg-icons": "^5.8.2",
+    "@fortawesome/fontawesome-free": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@mapbox/geojson-extent": "^0.3.2",
-    "bootstrap": "^4.3.1",
-    "bootstrap-slider": "^10.6.1",
+    "bootstrap": "^4.4.1",
+    "bootstrap-slider": "^10.6.2",
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^1.0.1",
     "d3": "^3.5.17",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.4.1",
-    "jszip": "^3.2.1",
+    "jszip": "^3.2.2",
     "mapbox-gl": "^0.51.0",
     "mini-css-extract-plugin": "^0.4.5",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "osmtogeojson": "^3.0.0-beta.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "osmtogeojson": "^3.0.0-beta.4",
     "style-loader": "^0.23.1",
-    "terser-webpack-plugin": "^1.3.0",
+    "terser-webpack-plugin": "^1.4.3",
     "typeface-chivo": "0.0.54",
-    "uglifyjs-webpack-plugin": "^2.1.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^1.1.2",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2"
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "lodash": "^4.17.15",
+    "mixin-deep": "^1.3.2",
+    "popper": "^1.0.1",
+    "set-value": "^2.0.1"
   },
   "dependencies": {
-    "popper": "^1.0.1"
   }
 }
