--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.12.0",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@mapbox/geojson-extent": "^0.3.2",
     "bootstrap": "^4.4.1",
     "bootstrap-slider": "^10.6.2",
@@ -24,23 +24,22 @@
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.5.0",
-    "jszip": "^3.2.2",
-    "mapbox-gl": "^0.51.0",
+    "jszip": "^3.4.0",
+    "lodash": "^4.17.15",
+    "mapbox-gl": "^1.10.0",
     "mini-css-extract-plugin": "^0.4.5",
+    "mixin-deep": "^1.3.2",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "osmtogeojson": "^3.0.0-beta.4",
+    "popper": "^1.0.1",
+    "set-value": "^2.0.1",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.4.3",
     "typeface-chivo": "0.0.54",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^1.1.2",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "lodash": "^4.17.15",
-    "mixin-deep": "^1.3.2",
-    "popper": "^1.0.1",
-    "set-value": "^2.0.1"
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
